[project]
name = "fastapi-auth-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Woosung Jo", email = "imws.jo@gmail.com"},
]
dependencies = ["fastapi>=0.115.13", "uvicorn>=0.34.3", "sqlalchemy>=2.0.41"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
